Dark mode fixes

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -29,3 +29,8 @@
   --ifm-background-color: #000000;
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
 }
+
+[data-theme='dark'] .navbar__logo img {
+  color: #fff;
+  fill: #fff;
+}
